fixed happycustomer not showing on productIdpage bug

--- a/src/components/full-page-comps/styles/productid.module.css
+++ b/src/components/full-page-comps/styles/productid.module.css
@@ -1,7 +1,7 @@
 .container{
     max-width: 900px;
     margin: auto;
-    padding-bottom: 10rem;
+    padding-bottom: 2rem;
 }
 
 
